--- a/index.html
+++ b/index.html
@@ -90,6 +90,73 @@
             <button class="btn btn-download">Download Now</button>
         </div>
     </section>
+    <section id="fifth-section">
+        <div class="container">
+            <div class="fifth-section_title">
+                <h3>PORTFOLIO</h3>
+                <h2>Recent Projects</h2>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="stationary">
+                        <img src="./assets/image/portfolio-1 (1).jpg" alt="">
+                    </div>
+                    <div class="img-desc">
+                        <h2>STRAWBERRIES</h2>
+                        <p>A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="ice-cream">
+                        <img src="./assets/image/portfolio-2.jpg" alt="">
+                    </div>
+                    <div class="img-desc">
+                        <h2>ICE CREAM</h2>
+                        <p>A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="strawberries">
+                        <img src="./assets/image/portfolio-3.jpg" alt="">
+                    </div>
+                    <div class="img-desc">
+                        <h2>STRAWBERRIES</h2>
+                        <p>Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="workspace">
+                        <img src="./assets/image/portfolio-4.jpg" alt="">
+                    </div>
+                    <div class="img-desc">
+                        <h2>WORKSPACE</h2>
+                        <p>A yellow workspace with some scissors, pencils, and other objects.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="sixth-section">
+        <h1>The buttons below are impossible to resist...</h1>
+        <div class="buttons">
+            <button class="btns click-btn">Click Me!</button>
+            <button class="btns look-btn">Look at Me!</button>
+        </div>
+    </section>
+    <section id="seventh">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.5779942888375!2d-122.41934238478005!3d37.77649217975919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x30228bf440a8293a!2zMzfCsDQ2JzM1LjQiTiAxMjLCsDI1JzAxLjQiVw!5e0!3m2!1sen!2s!4v1669744480733!5m2!1sen!2s"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <footer>
+        <div class="footer-icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
+        <h5>Copyright © Your Website 2022</h5>
+    </footer>
 </body>
 
 </html>
